--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.0",
     "permissions": ["tabs", "activeTab", "scripting"],
     "action": {
-      "default_icon": "logo.png"
+      "default_icon": "images/logo.png"
     },
 
     "background": {
@@ -19,7 +19,12 @@
     ],
     "web_accessible_resources": [
       {
-        "resources": ["overlay.html", "catsitting.png"],
+        "resources": ["overlay.html", 
+        "images/catsitting.png", 
+        "images/calenderButton1.png",
+        "images/calenderButton2.png",
+        "images/settingButton1.png",
+        "images/settingButton2.png"],
         "matches": ["<all_urls>"]
       }
     ]
