Fixed settings and display

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
     "web_accessible_resources": [
       {
         "resources": ["overlay.html", 
+        "settings.html",
         "images/catsitting.png", 
         "images/calenderButton1.png",
         "images/calenderButton2.png",
