trying and failing to get a chart thing to work

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["addDiv.js", "graphs.js"]
+      "js": ["addDiv.js"]
     }
   ],
   "web_accessible_resources": [
