--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,9 @@
         "images/settingButton2.png",
         "images/catmenu.png",
         "images/upButton.png",
-        "images/catwalkinggif.gif"
+        "images/catwalkinggif.gif",
+        "images/catsleepinggif.gif",
+        "images/sleepingZ.png"
       ],
       "matches": ["<all_urls>"]
     }
