--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 3,
   "name": "CatTracker",
-  "description": "Browser pet that helps manages your time on the web!",
+  "description": "Browser pet that helps manage your time on the web!",
   "version": "1.0",
   "permissions": ["tabs", "activeTab", "scripting", "storage", "webNavigation", "windows"],
+  "host_permissions": ["<all_urls>", "chrome-extension://*/*"],
   "action": {
     "default_icon": "images/cattrackerlogo128.png"
   },
@@ -13,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["lib/Chart.min.js","addDiv.js"]
+      "js": ["lib/Chart.min.js", "addDiv.js"]
     }
   ],
   "icons": {
@@ -26,7 +27,7 @@
     {
       "resources": [
         "overlay.html", 
-        "stats.html",
+        "settings.html",
         "images/catsitting.png", 
         "images/calenderButton1.png",
         "images/calenderButton2.png",
@@ -36,9 +37,10 @@
         "images/upButton.png",
         "images/catwalkinggif.gif",
         "images/catsleepinggif.gif",
-        "images/sleepingZ.png"
+        "images/sleepingZ.png",
+        "images/htmlbackground.png"
       ],
-      "matches": ["<all_urls>"]
+      "matches": ["<all_urls>", "chrome-extension://*/*"]
     }
   ]
 }
